--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.15.2",
+    "@nuxtjs/supabase": "^1.2.1",
+    "@vueuse/nuxt": "^10.9.0",
     "maplibre-gl": "^4.1.3",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "nuxt-icon": "^0.6.10"
   }
 }
